[package]
name = "udevrs"
version = "0.3.0"
edition = "2021"
authors = ["udev Rust Developers"]
description = "Pure Rust implementation of the user-land udev library"
keywords = ["udev", "devfs", "linux", "unix"]
categories = ["filesystem", "os", "os::linux-apis", "os::unix-apis"]
repository = "https://github.com/cr8t/udev"
license = "LGPL-2.0-or-later"

[dependencies]
bitflags = "2.4"
glob = "0.3"
heapless = "0.7"
libc = "0.2"
log = "0.4"

[dependencies.nix]
version = "0.27"
features = ["ioctl"]

[dev-dependencies]
env_logger = "0.10"
